[package]
name = "lau-reward-hacking-detector"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-reward-hacking-detector"
description = "Cohomological reward hacking detection — holonomy of value 1-form reveals local optimization with global cycling"

[dependencies]
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
